kubernetes/logging/kibana/kb-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: kibana
  namespace: logging
  labels:
    app: kibana
spec:
  ports:
    - port: 5601
  selector:
    app: kibana
